@@ -10,3 +10,4 @@ README.Rmd
 mkdocs
 docs
 logo.png.github
+.github
