@@ -16,7 +16,11 @@ geom_range <- function(range="height_0.95_HPD", ...) {
 
     default_aes <- aes_(x=~x, y=~y, xend=~x, yend=~y)
 
-    mapping <- modifyList(default_aes, aes_string(branch.length="branch.length", label=range))
+    if (grepl("^height", range)) {
+        mapping <- modifyList(default_aes, aes_string(branch.length="height", label=range))
+    } else {
+        mapping <- modifyList(default_aes, aes_string(branch.length="branch.length", label=range))
+    }
 
     layer(
         stat = StatRange,
@@ -26,7 +30,8 @@ geom_range <- function(range="height_0.95_HPD", ...) {
         position = position,
         show.legend=show.legend,
         inherit.aes = inherit.aes,
-        params = list(na.rm = na.rm, ...),
+        params = list(na.rm = na.rm,
+                      ...),
         check.aes = FALSE
     )
 
@@ -42,6 +47,7 @@ StatRange <- ggproto("StatRange", Stat,
                          rr2 <- strsplit(rr, split=',') %>% do.call('rbind', .)
                          rr2 <- matrix(as.numeric(rr2), ncol=2, byrow=FALSE)
                          rr2 <- rr2 + df$x - df$branch
+
                          data.frame(x = rr2[,1],
                                     xend = rr2[,2],
                                     y = df$y,
